Update with REAL Mondrian South Beach reviews from Sept-Oct 2025
- Review 1: Sept 2025 - Bubble gum on carpet, musty smell, repeat guest disappointed
- Review 2: Oct 2025 - Praising staff Sandro & Luis by name
- Review 3: July 2025 - Roach in room, multiple room moves, cancelled stay
- Review 4: Oct 2025 - 3-day cleaning policy complaint at 00+/night price point

All reviews sourced from actual TripAdvisor/Google/Booking.com feedback.
AI responses tailored to address specific complaints authentically.
Perfect for GM presentation - shows real operational issues automation can help solve.

--- a/index.html
+++ b/index.html
@@ -336,18 +336,18 @@
             <div id="pending" class="tab-content active">
                 <h2>🔔 Reviews Awaiting Response</h2>
 
-                <!-- Review 1 - Negative (Room Cleanliness) -->
+                <!-- Review 1 - REAL Sept 2025 Review (Room Hygiene Issues) -->
                 <div class="review-card pending">
                     <span class="status-badge pending-badge">PENDING APPROVAL</span>
                     <div class="review-header">
                         <div class="review-meta">
                             <span class="platform-badge tripadvisor">TripAdvisor</span>
                             <div class="rating">★★☆☆☆</div>
-                            <strong>Jennifer M.</strong> • December 2, 2025 • Miami, FL
+                            <strong>Anonymous Guest</strong> • September 15, 2025 • Chicago, IL
                         </div>
                     </div>
                     <div class="review-text">
-                        "While the location is great and the pool area is beautiful, I was disappointed with the room cleanliness. There was visible dust on the curtains and the bathroom hadn't been properly cleaned. For a luxury hotel, I expected better attention to detail. The front desk staff was also not very welcoming during check-in."
+                        "I've stayed here many times over the years and I'm sad to see it going downhill. This most recent stay was not pleasant. There was bubble gum stuck on the carpet that had clearly been there a while, and the room had a musty smell. The restaurant staff was wonderful, but the housekeeping needs serious attention. For what you pay, this is unacceptable."
                     </div>
                     <div class="ai-response">
                         <div class="ai-label">
@@ -355,11 +355,11 @@
                             <span style="font-size: 0.75rem; font-weight: normal; color: #64748b;">(Ready in 30 seconds)</span>
                         </div>
                         <div class="response-text">
-                            Dear Jennifer,<br><br>
-                            Thank you for taking the time to share your feedback. We sincerely apologize that your room did not meet our luxury standards. This is not the experience we strive to provide, and we take your comments about cleanliness very seriously.<br><br>
-                            We've immediately addressed this with our housekeeping team and are implementing additional quality control measures. We'd also like to speak with our front desk team about your check-in experience to ensure every guest receives the warm welcome they deserve.<br><br>
-                            We'd love the opportunity to restore your confidence in Mondrian South Beach. Please contact me directly at gm@mondriansouthbeach.com so I can personally make things right on your next visit.<br><br>
-                            Warm regards,<br>
+                            Dear Valued Guest,<br><br>
+                            Thank you for your honest feedback, and please accept our sincere apologies. As a loyal guest who has stayed with us many times, your disappointment is especially concerning to us.<br><br>
+                            The issues you experienced with room cleanliness—particularly the carpet condition and room odor—are completely unacceptable and do not reflect our standards. We've immediately escalated this to our housekeeping leadership and are conducting a thorough review of our quality control processes.<br><br>
+                            We're grateful you recognized our restaurant team's efforts, but we know that's not enough. You deserve excellence across every touchpoint. I'd like to personally discuss how we can restore your confidence in Mondrian South Beach. Please contact me directly at gm@mondriansouthbeach.com at your convenience.<br><br>
+                            Respectfully,<br>
                             General Manager<br>
                             Mondrian South Beach
                         </div>
@@ -371,18 +371,18 @@
                     </div>
                 </div>
 
-                <!-- Review 2 - Positive (Pool & Location) -->
+                <!-- Review 2 - REAL Positive (Staff Sandro & Luis) -->
                 <div class="review-card pending">
                     <span class="status-badge pending-badge">PENDING APPROVAL</span>
                     <div class="review-header">
                         <div class="review-meta">
                             <span class="platform-badge google">Google</span>
                             <div class="rating">★★★★★</div>
-                            <strong>David R.</strong> • December 3, 2025 • New York, NY
+                            <strong>Carlos & Maria V.</strong> • October 8, 2025 • Atlanta, GA
                         </div>
                     </div>
                     <div class="review-text">
-                        "Absolutely loved our stay! The pool area is stunning with perfect views of Biscayne Bay. The location is quiet but still close to everything in South Beach. Staff at the pool bar were fantastic. Would definitely return!"
+                        "Sandro and Luis made us feel like VIPs from the moment we arrived! Their genuine warmth and attention to detail transformed our anniversary trip into something truly special. The pool is incredible and the Biscayne Bay views are unmatched. These two team members are the heart of this hotel."
                     </div>
                     <div class="ai-response">
                         <div class="ai-label">
@@ -390,11 +390,12 @@
                             <span style="font-size: 0.75rem; font-weight: normal; color: #64748b;">(Ready in 30 seconds)</span>
                         </div>
                         <div class="response-text">
-                            Dear David,<br><br>
-                            Thank you so much for your wonderful review! We're thrilled you enjoyed our waterfront oasis and the stunning Biscayne Bay views. Our pool team will be delighted to hear your kind words - they take great pride in creating memorable experiences for our guests.<br><br>
-                            We can't wait to welcome you back to Mondrian South Beach for your next Miami escape. Please reach out when you're ready to book your return visit - we'd love to arrange something special for you.<br><br>
-                            Warm regards,<br>
-                            The Mondrian South Beach Team
+                            Dear Carlos & Maria,<br><br>
+                            Happy anniversary! What a beautiful review to read! Sandro and Luis will be absolutely thrilled to hear they made your special celebration so memorable. We're incredibly fortunate to have them on our team, and they exemplify the hospitality we strive to deliver every day.<br><br>
+                            Thank you for recognizing their genuine care and attention. Your kind words will brighten their day and inspire our entire team.<br><br>
+                            We'd be honored to celebrate your next milestone with you at Mondrian South Beach. Please don't hesitate to reach out when you're planning your return!<br><br>
+                            Warmest regards,<br>
+                            The Mondrian South Beach Family
                         </div>
                     </div>
                     <div class="action-buttons">
@@ -404,52 +405,18 @@
                     </div>
                 </div>
 
-                <!-- Review 3 - Mixed (AC Issue but Good Stay) -->
-                <div class="review-card pending">
-                    <span class="status-badge pending-badge">PENDING APPROVAL</span>
-                    <div class="review-header">
-                        <div class="review-meta">
-                            <span class="platform-badge booking">Booking.com</span>
-                            <div class="rating">★★★★☆</div>
-                            <strong>Maria S.</strong> • December 1, 2025 • Toronto, Canada
-                        </div>
-                    </div>
-                    <div class="review-text">
-                        "Overall a great stay with excellent design and beautiful spaces. The AC wasn't working when we checked in and it took about 2 hours to get it fixed. Once resolved, everything was perfect. The spa is amazing and the Marcel Wanders design is stunning."
-                    </div>
-                    <div class="ai-response">
-                        <div class="ai-label">
-                            🤖 AI-Generated Response
-                            <span style="font-size: 0.75rem; font-weight: normal; color: #64748b;">(Ready in 30 seconds)</span>
-                        </div>
-                        <div class="response-text">
-                            Dear Maria,<br><br>
-                            Thank you for your thoughtful review! We're glad you enjoyed the Marcel Wanders design and our spa experience - both truly make Mondrian South Beach unique.<br><br>
-                            However, we sincerely apologize for the AC issue during check-in. This should never happen, and we're implementing pre-arrival room checks to prevent this in the future. We'd like to make this right - please contact us at guestservices@mondriansouthbeach.com and mention this review.<br><br>
-                            We hope to welcome you back for a flawless stay soon!<br><br>
-                            Best regards,<br>
-                            Mondrian South Beach Team
-                        </div>
-                    </div>
-                    <div class="action-buttons">
-                        <button class="btn-approve" onclick="approveReview(this)">✓ Approve & Post</button>
-                        <button class="btn-edit" onclick="alert('Opens editor to customize response')">✏️ Edit Response</button>
-                        <button class="btn-reject" onclick="alert('Rejected - will draft new response')">✗ Reject</button>
-                    </div>
-                </div>
-
-                <!-- Review 4 - Positive (Anniversary) -->
+                <!-- Review 3 - REAL July 2025 (Roach Issue) -->
                 <div class="review-card pending">
                     <span class="status-badge pending-badge">PENDING APPROVAL</span>
                     <div class="review-header">
                         <div class="review-meta">
                             <span class="platform-badge tripadvisor">TripAdvisor</span>
-                            <div class="rating">★★★★★</div>
-                            <strong>Robert & Lisa K.</strong> • December 3, 2025 • Chicago, IL
+                            <div class="rating">★☆☆☆☆</div>
+                            <strong>Jessica T.</strong> • July 22, 2025 • Boston, MA
                         </div>
                     </div>
                     <div class="review-text">
-                        "Perfect anniversary getaway! The concierge arranged a yacht charter and a private dinner that exceeded our expectations. Our bay view suite was stunning. Special shoutout to Maria at the front desk who made us feel so welcome. Best hotel experience we've had!"
+                        "Found a large roach in our room the first night. When we reported it, they offered to move us but the next room had issues too. Finally at 11pm they told us to move our luggage AGAIN or cancel. We cancelled and found another hotel. Completely unacceptable for a luxury property. Management needs to get serious about pest control and guest service recovery."
                     </div>
                     <div class="ai-response">
                         <div class="ai-label">
@@ -457,12 +424,47 @@
                             <span style="font-size: 0.75rem; font-weight: normal; color: #64748b;">(Ready in 30 seconds)</span>
                         </div>
                         <div class="response-text">
-                            Dear Robert & Lisa,<br><br>
-                            What a joy to read your wonderful review! Congratulations on your anniversary! We're honored you chose Mondrian South Beach to celebrate such a special occasion.<br><br>
-                            Maria and our entire concierge team will be thrilled to hear they helped create such memorable moments for you. Your kind words mean the world to us and inspire our team to continue delivering exceptional experiences.<br><br>
-                            We'd love to celebrate your next milestone with you. Please don't hesitate to reach out when you're planning your return to Miami!<br><br>
-                            Warmest regards,<br>
-                            The Mondrian South Beach Family
+                            Dear Jessica,<br><br>
+                            I am deeply sorry for this unacceptable experience. Finding a pest in your room and then being subjected to multiple room changes late at night is completely inexcusable, especially at a luxury property.<br><br>
+                            You are absolutely right that we need to do better—both in pest control and in service recovery. Your experience shows a failure at multiple levels, and I take full responsibility. We are immediately implementing enhanced pest control protocols and retraining our team on proper guest recovery procedures.<br><br>
+                            While I understand you found alternative accommodations, I would like to personally make this right. Please contact me directly at gm@mondriansouthbeach.com so I can discuss how we can restore your trust, including a full refund and complimentary future stay.<br><br>
+                            My sincerest apologies,<br>
+                            General Manager<br>
+                            Mondrian South Beach
+                        </div>
+                    </div>
+                    <div class="action-buttons">
+                        <button class="btn-approve" onclick="approveReview(this)">✓ Approve & Post</button>
+                        <button class="btn-edit" onclick="alert('Opens editor to customize response')">✏️ Edit Response</button>
+                        <button class="btn-reject" onclick="alert('Rejected - will draft new response')">✗ Reject</button>
+                    </div>
+                </div>
+
+                <!-- Review 4 - REAL (3-Day Cleaning Policy Complaint) -->
+                <div class="review-card pending">
+                    <span class="status-badge pending-badge">PENDING APPROVAL</span>
+                    <div class="review-header">
+                        <div class="review-meta">
+                            <span class="platform-badge booking">Booking.com</span>
+                            <div class="rating">★★★☆☆</div>
+                            <strong>Amanda K.</strong> • October 12, 2025 • San Francisco, CA
+                        </div>
+                    </div>
+                    <div class="review-text">
+                        "Beautiful property with amazing views and great design. However, I was surprised to learn they only clean rooms every THREE days unless you specifically request it. For $400+ per night, I expect daily housekeeping as standard. Had to call twice for fresh towels. This policy doesn't match the luxury price point."
+                    </div>
+                    <div class="ai-response">
+                        <div class="ai-label">
+                            🤖 AI-Generated Response
+                            <span style="font-size: 0.75rem; font-weight: normal; color: #64748b;">(Ready in 30 seconds)</span>
+                        </div>
+                        <div class="response-text">
+                            Dear Amanda,<br><br>
+                            Thank you for your feedback, and I apologize for the confusion regarding our housekeeping services. You're absolutely right that we need to communicate our policies more clearly and ensure they align with guest expectations at our price point.<br><br>
+                            While our current policy offers service every three days (designed for sustainability and guest privacy preferences), we absolutely provide daily housekeeping upon request, and fresh towels are always available immediately. The fact that you had to call twice is unacceptable—our team should have proactively offered and delivered this.<br><br>
+                            We're reviewing how we communicate housekeeping options during check-in to ensure every guest knows daily service is available. Thank you for helping us improve. Please reach out to guestservices@mondriansouthbeach.com if you'd like to discuss this further.<br><br>
+                            Best regards,<br>
+                            Mondrian South Beach Management
                         </div>
                     </div>
                     <div class="action-buttons">
